<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:orientation="vertical"
    android:id="@+id/firstFragment">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnSub"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="10dp"
        android:textColor="#ffff"
        />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/Sub"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="10dp"
        android:textColor="#ffff"
        />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/Mul"
        android:layout_below="@+id/btnSub"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="10dp"
        android:textColor="#ffff"
        />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/Div"
        android:layout_below="@+id/btnMul"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:textColor="#ffff"
        />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Reset"
        android:visibility="gone"
        android:layout_below="@+id/tvResult"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:textColor="#ffff"
        />

</RelativeLayout>