<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:id="@+id/secondFragment">

    <EditText
        android:id="@+id/etFirstNo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/FirNo"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/etSecondNo"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/etSecondNo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/SecNo"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSecondNo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/Btn"
        android:textColor="#ffff" />


</RelativeLayout>